--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,9 @@ body {
   src: local("BasierCircleReg"),
     url("./assets/fonts/BasierCircle-Regular.woff") format("woff");
 }
+.makeStyles-content-11{
+  width: 80%;
+}
 .rdrDateRangeWrapper {
   border-left: 1px solid gainsboro;
 }
