--- a/src/components/report/reports/co2breakdown/index.scss
+++ b/src/components/report/reports/co2breakdown/index.scss
@@ -72,12 +72,10 @@
     }
   }
   .waste-main {
-    height: 300px;
-    overflow-y: auto;
+     overflow-y: auto;
     .waste-detail {
       display: flex;
-      align-items: center;
-      font-weight: 500;
+       font-weight: 500;
       font-size: 12px;
       line-height: 16px;
       justify-content: space-between;
@@ -89,7 +87,7 @@
   .main-emission-break-down-2 {
     display: flex;
     overflow-x: auto;
-    margin: 20px 0px;
+    margin: 10px 0px;
     width: 100%;
     .span-for-arrows {
       display: flex;
@@ -112,7 +110,7 @@
 
       .site-name {
         margin: 40px 0px 20px 0px;
-
+        text-align: center;
         .site {
           font-weight: 700;
           font-size: 12px;
