vat number added

--- a/src/containers/registration/Register/register.scss
+++ b/src/containers/registration/Register/register.scss
@@ -63,6 +63,7 @@
         background: #36b8fc;
         width: 400px;
         height: 48px;
+        color: #fff!important;
       }
       .MuiButton-label {
         font-family: "DM Sans";
