--- a/src/containers/registration/addPhone/addphone.scss
+++ b/src/containers/registration/addPhone/addphone.scss
@@ -82,6 +82,7 @@
       background: #36b8fc;
       width: 400px;
       height: 48px;
+      color: #fff!important;
     }
     .Mui-disabled {
       opacity: 0.4 !important;
