--- a/src/components/report/header/index.scss
+++ b/src/components/report/header/index.scss
@@ -49,6 +49,11 @@
           color: #0f2851;
         }
       }
+      .rdrDateRangePickerWrapper{
+        top: 12%;
+        right: 15%;
+        z-index: 1;
+      }
     }
     .first {
       width: 100%;
