--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -3,53 +3,37 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: #36b8fc;
+  background: #0f2851;
   padding-top: 75px;
   padding-bottom: 120px;
 
   .footer-top-title {
-    font-family: Roboto;
+    font-family: "DM Sans";
     font-style: normal;
     font-weight: 700;
-    font-size: 2em;
-    line-height: 37px;
-    color: #fff;
-    padding-bottom: 36px;
+    font-size: 32px;
+    line-height: 34px;
     text-align: center;
+    color: #ffffff;
   }
-  .footer-item-main {
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-wrap: wrap;
-  }
-  .footer-item {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 190px;
-    height: 200px;
-  }
+
   .footer-title {
-    font-family: "Roboto";
+    font-family: "DM Sans";
     font-style: normal;
-    font-weight: bold;
+    font-weight: 700;
     font-size: 18px;
-    line-height: 21px;
-    padding-top: 12px;
-    padding-bottom: 8px;
-    color: #fff;
+    line-height: 22px;
+    letter-spacing: -0.3px;
+    color: #ffffff;
+    padding: 10px 0px;
   }
   .footer-description {
-    color: #fff;
-    font-family: DM Sans;
+    font-family: "DM Sans";
     font-style: normal;
-    font-weight: normal;
+    font-weight: 400;
     font-size: 14px;
-    line-height: 18px;
-    text-align: center;
+    line-height: 20px;
+    color: #ffffff;
   }
 
   .footer-get-quote {
@@ -71,7 +55,7 @@
     }
   }
 }
-@media (max-width: 1024px) and (min-width: 1px){
+@media (max-width: 1024px) and (min-width: 1px) {
   .footer-main {
     .footer-top-title {
       font-size: 1.5em;
@@ -81,7 +65,7 @@
     }
   }
 }
-@media (max-width: 768px) and (min-width: 1px){
+@media (max-width: 768px) and (min-width: 1px) {
   .footer-main {
     .footer-get-quote {
       width: 90%;
