--- a/src/components/dashboard/jobStatus/jobStatus.scss
+++ b/src/components/dashboard/jobStatus/jobStatus.scss
@@ -1,6 +1,7 @@
 .jobcard {
-  width: 190px;
-  margin-right: 10px;
+  height: 100%;
+  // width: 190px;
+  // margin-right: 10px;
   @media only screen and (max-width: 768px) {
     margin-bottom: 10px;
     margin-right: 10px;
@@ -18,22 +19,20 @@
 }
 
 .box {
-  text-align: center;
+  height: 100%;
   background-color: #fff;
-  padding: 33px 20px 20px;
+  padding: 12px;
   // border: 2px solid #ececec;
   box-shadow: 0px 17px 24px rgba(58, 58, 58, 0.05) !important;
   box-sizing: border-box;
-  height: 130px;
+  // height: 130px;
   border-radius: 11.6836px !important;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
+
   h1 {
     font-family: "BasierCircleBold";
     font-style: normal;
     font-weight: bold;
-    font-size: 32px;
+    font-size: 24px;
     line-height: 38px;
     display: flex;
     align-items: center;
