--- a/src/components/dashboard/totalSpend/totalspend.scss
+++ b/src/components/dashboard/totalSpend/totalspend.scss
@@ -1,11 +1,11 @@
 .listViewWp {
+  height: 100%;
   .lineChartWp {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    height: 100%;
+
     background: #fff;
     border-radius: 11.6836px;
-    padding: 33px 20px 20px;
+    padding: 12px;
     box-shadow: 0px 17px 24px rgba(58, 58, 58, 0.05) !important;
     // border: 2px solid #ececec;
     box-sizing: border-box;
@@ -17,19 +17,19 @@
       display: block;
     }
     .chartInfo {
+      margin-top: 20px;
       h1 {
         font-family: "BasierCircleBold";
         font-style: normal;
         font-weight: bold;
-        font-size: 32px;
+        font-size: 24px;
         line-height: 38px;
         display: flex;
         align-items: center;
-        color: #0d0d39;
         margin: 0px;
         margin-bottom: 3px;
         @media only screen and (max-width: 380px) {
-          font-size: 25px;
+          font-size: 24px;
         }
       }
     }
@@ -41,5 +41,14 @@
         height: auto !important;
       }
     }
+  }
+  .filter-bold {
+    padding-left: 5px;
+    font-family: "DM Sans";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 20px;
+    color: #0f2851;
   }
 }
