--- a/src/containers/registration/SignIn/signin.scss
+++ b/src/containers/registration/SignIn/signin.scss
@@ -1,13 +1,48 @@
+.another-account-sign-up {
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 21px;
+  text-align: center;
+  color: #0f2851;
+  margin-bottom: 15px;
+  span {
+    text-decoration: underline;
+    color: #60a0f8;
+  }
+}
+.another-account {
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 21px;
+  text-align: center;
+  color: #0f2851;
+  padding-bottom: 98px;
+
+  span {
+    text-decoration: underline;
+    color: #60a0f8;
+  }
+}
+// }
+
+.main {
+  background: #36b8fc;
+}
+
 .login-main {
   background-color: #fff;
   border-bottom-left-radius: 80px;
   border-bottom-right-radius: 80px;
   .login-section {
-    width: 20%;
+    // width: 20%;
     margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    // display: flex;
+    // flex-direction: column;
+    // align-items: center;
     .title {
       font-family: DM Sans;
       font-style: normal;
@@ -18,10 +53,6 @@
       padding-bottom: 24px;
     }
     .search-input {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
       width: 100%;
       .MuiOutlinedInput-root{
         padding-left: 0px;
@@ -35,7 +66,7 @@
       .MuiInputBase-root {
         width: 100%;
         border-radius: 45px;
-        margin-bottom: 16px;
+        margin-bottom: 30px;
         .MuiTypography-root {
           background-color: #29a7df;
           color: #fff;
@@ -47,7 +78,6 @@
       .MuiFormControl-root {
         margin: 0px;
         width: 100%;
-        padding: 5%;
       }
     }
     .login-next-btn {
@@ -56,15 +86,15 @@
       width: 100%;
       .MuiButton-root {
         border-radius: 64px;
-        background: #36b8fc;
+        background: linear-gradient(180deg, #73c6f9 0%, #5391f9 100%);
         width: 100%;
         height: 48px;
       }
       .MuiButton-label {
         font-family: "DM Sans";
         font-style: normal;
-        font-weight: bold;
-        font-size: 16px;
+        font-weight: 700;
+        font-size: 14px;
         color: #ffffff;
         line-height: 19px;
         text-transform: initial;
@@ -81,33 +111,33 @@
     color: #0f2851;
     padding-bottom: 98px;
 
-    span{
+    span {
       text-decoration: underline;
     }
   }
 }
 
-.main {
-  background: #36b8fc;
-}
-@media (max-width: 1024px) and (min-width: 769px){
-  .login-main {
-    .login-section {
-      width: 45%;
-    }
-  }
-}
-@media (max-width: 768px) and (min-width: 426px){
-  .login-main {
-    .login-section {
-      width: 50%;
-    }
-  }
-}
-@media (max-width: 425px) and (min-width: 1px){
-  .login-main {
-    .login-section {
-      width: 90%;
-    }
-  }
-}
+// .main {
+//   background: #0f2851;
+// }
+// @media (max-width: 1024px) and (min-width: 769px){
+//   .login-main {
+//     .login-section {
+//       width: 45%;
+//     }
+//   }
+// }
+// @media (max-width: 768px) and (min-width: 426px){
+//   .login-main {
+//     .login-section {
+//       width: 50%;
+//     }
+//   }
+// }
+// @media (max-width: 425px) and (min-width: 1px){
+//   .login-main {
+//     .login-section {
+//       width: 90%;
+//     }
+//   }
+// }
