--- a/src/assets/styles/scss/_variables.scss
+++ b/src/assets/styles/scss/_variables.scss
@@ -66,6 +66,17 @@ $v110: 110px;
   display: flex;
   align-items: center;
 }
+.normal-dsans-10-primary1-disable {
+  color: "#677790!important";
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 10px;
+  line-height: 13px;
+  display: contents;
+  font-weight: bolder;
+  cursor: pointer;
+}
 .primary-title {
   @extend .common-title;
   color: rgb(81, 142, 248);
@@ -207,17 +218,17 @@ $v110: 110px;
 .align-center {
   align-items: center;
 }
-.justify-center{
-  justify-content: center!important;
+.justify-center {
+  justify-content: center !important;
 }
-.flex-1{
+.flex-1 {
   flex: 1;
 }
-.flex-3{
+.flex-3 {
   flex: 3;
 }
 
-.w-100{
+.w-100 {
   width: 100%;
 }
 // info window of google map
