--- a/src/components/commonComponent/commonSearch/commonSearch.scss
+++ b/src/components/commonComponent/commonSearch/commonSearch.scss
@@ -9,6 +9,7 @@
   display: flex;
   align-items: center;
   margin-left: 10px;
+  height: 100%;
   @media only screen and (max-width: 1024px) {
     margin-bottom: 10px;
   }
