--- a/src/components/single-select-auto-complete/style.scss
+++ b/src/components/single-select-auto-complete/style.scss
@@ -1,16 +1,16 @@
 .single-select-main {
-  .MuiPaper-root {
-    width: 250px !important;
-    overflow: auto !important;
-  }
+//   .MuiPaper-root {
+//     width: 250px !important;
+//     overflow: auto !important;
+//   }
   .MuiOutlinedInput-notchedOutline {
     border: none;
     border-color: unset;
   }
   .MuiPaper-root {
-    width: 250px !important;
+    // width: 250px !important;
   }
   .MuiPaper-elevation {
-    width: 250px !important;
+    // width: 250px !important;
   }
 }
