--- a/src/components/report/reports/co2breakdown/index.scss
+++ b/src/components/report/reports/co2breakdown/index.scss
@@ -25,6 +25,7 @@
             color: #0f2851;
             padding: 0;
             margin: 0;
+            width: 120px
           }
 
           p {
