multple site manager

--- a/src/components/siteManager/newManagerDetail/newmanagerdetail.scss
+++ b/src/components/siteManager/newManagerDetail/newmanagerdetail.scss
@@ -81,6 +81,7 @@
           font-size: 12px;
           line-height: 16px;
           color: #4b686e;
+          overflow-wrap: break-word;
         }
       }
     }
