--- a/src/components/report/header/index.scss
+++ b/src/components/report/header/index.scss
@@ -27,7 +27,7 @@
 
     .report-header-card {
       display: flex;
-      justify-content: flex-end;
+      justify-content: space-between;
       align-items: center;
       padding: 1.5% 2%;
       background: #fff;
@@ -45,7 +45,11 @@
         font-size: 14px;
         line-height: 20px;
         color: #677790;
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
         span {
+          padding-right: 5px;
           color: #0f2851;
         }
       }
@@ -60,7 +64,7 @@
       margin-left: 0%;
       padding: 1% 0%;
       background: none;
-      justify-content: flex-start;
+      justify-content: space-between;
       border-radius: 0;
       box-shadow: none;
       padding-right: 3%;
@@ -71,7 +75,6 @@
       .text {
         font-size: 16px;
         text-align: left;
-        width: 45%;
         @media only screen and (max-width: 1024px) {
           margin: 2% 0%;
           width: 100%;
