--- a/src/components/dashboard/dashboardServices/dashboardservices.scss
+++ b/src/components/dashboard/dashboardServices/dashboardservices.scss
@@ -9,7 +9,7 @@
   height: 400px;
   max-height: 100%;
   margin-right: 10px;
-  width: 60%;
+  margin-left: 10px;
 
   @media only screen and (max-width: 768px) {
     width: 100% !important;
