--- a/src/components/dashboard/Header/index.scss
+++ b/src/components/dashboard/Header/index.scss
@@ -1,6 +1,5 @@
 .date-filter{
   background: white;
-  border: 1px solid lightgray;
   border-radius: 16px;
   box-shadow: 0px 17px 24px rgba(58, 58, 58, 0.05);
   display: flex;
@@ -29,6 +28,7 @@
   display: flex;
   width: 100%;
   justify-content: flex-start;
+  padding-left: 4%;
 }
 .small-text{
   font-size: 16px;
