--- a/src/components/dashboard/jobStatus/jobStatus.scss
+++ b/src/components/dashboard/jobStatus/jobStatus.scss
@@ -18,8 +18,10 @@
     align-items: center;
     color: #0d0d39;
     margin: 0px;
+    word-break: break-word;
   }
   span{
     color: slategray;
+    word-break: break-word;
   }
 }
