--- a/src/components/dashboard/spendChart/spendchart.scss
+++ b/src/components/dashboard/spendChart/spendchart.scss
@@ -15,6 +15,7 @@
     align-items: center;
     justify-content: space-between;
     margin-bottom: 5%;
+    padding: 2%;
     .salesPrice {
       display: flex;
       align-items: center;
