--- a/src/components/reactTable/jobs-react-table.scss
+++ b/src/components/reactTable/jobs-react-table.scss
@@ -9,7 +9,7 @@
   }
 
   table {
-    font-family: 'DM Sans';
+    font-family: "DM Sans";
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
@@ -18,6 +18,12 @@
     text-align: left;
     width: 100%;
     border-collapse: collapse;
+
+    thead {
+      position: sticky;
+      top: 0;
+      background: #fff;
+    }
 
     tr {
       border: none !important;
@@ -44,7 +50,7 @@
 
     tbody {
       .even {
-        background: #F6F6F6;
+        background: #f6f6f6;
       }
     }
 
