--- a/src/components/dashboard/jobStatus/jobStatus.scss
+++ b/src/components/dashboard/jobStatus/jobStatus.scss
@@ -1,7 +1,8 @@
 
 .box {
   background-color: #fff;
-  padding: 20px 15px;
+  padding: 10% 6%;
+  padding-right: 0px;
   // border: 2px solid #ececec;
   box-shadow: 0px 17px 24px rgba(58, 58, 58, 0.05) !important;
   box-sizing: border-box;
@@ -12,7 +13,7 @@
   h1 {
     font-style: normal;
     font-weight: 500;
-    font-size: 32px;
+    font-size: 25px;
     line-height: 38px;
     display: flex;
     align-items: center;
