--- a/src/components/report/reports/co2breakdown/index.scss
+++ b/src/components/report/reports/co2breakdown/index.scss
@@ -1,11 +1,13 @@
 .salesWp {
   .salesWp-inner-wrap {
+    justify-content: space-evenly;
     .salesWp-sub {
       .guage-with-text {
         display: flex;
         flex-direction: row;
-        justify-content: center;
+        justify-content: space-evenly;
         align-items: center;
+        width: 100%;
 
         .text {
           display: flex;
@@ -25,7 +27,6 @@
             color: #0f2851;
             padding: 0;
             margin: 0;
-            width: 120px
           }
 
           p {
