--- a/src/components/report/reports/co2breakdown/index.scss
+++ b/src/components/report/reports/co2breakdown/index.scss
@@ -1,8 +1,16 @@
 .salesWp {
   .salesWp-inner-wrap {
-    justify-content: space-evenly;
+    justify-content: space-evenly !important;
+    align-items: center;
     .salesWp-sub {
       .guage-with-text {
+        .salesWp-sub2{
+          display: grid;
+          flex-direction: column;
+          justify-content: space-evenly;
+          align-items: center;
+          width: 120px;
+        }
         display: flex;
         flex-direction: row;
         justify-content: space-evenly;
@@ -27,6 +35,7 @@
             color: #0f2851;
             padding: 0;
             margin: 0;
+            justify-content: center;
           }
 
           p {
