--- a/src/components/report/reports/sitemovements/index.scss
+++ b/src/components/report/reports/sitemovements/index.scss
@@ -1,5 +1,8 @@
 .report-chart-card {
   .salesWp {
+    h1{
+      margin: 0;
+    }
     .more-drop {
       .small-chart {
         display: flex;
