--- a/src/containers/reports/report.scss
+++ b/src/containers/reports/report.scss
@@ -1,11 +1,14 @@
 .main-report {
   margin-bottom: 5%;
   .report-grid {
+    background: #F6F6F6;
+    font-family: 'DM Sans';
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
     align-items: flex-start;
     width: 100%;
+    padding: 20px 0px;
     @media only screen and (max-width: 1100px) {
       flex-direction: column;
     }
@@ -13,7 +16,8 @@
       display: flex;
       justify-content: flex-start;
       align-items: flex-start;
-      width: 47%;
+      width: 48%;
+      padding-bottom: 10px;
       @media only screen and (max-width: 1100px) {
         width: 100%;
       }
