--- a/src/assets/styles/scss/_sidebar.scss
+++ b/src/assets/styles/scss/_sidebar.scss
@@ -27,6 +27,9 @@
 .sidebar-container {
   display: flex;
 }
+.primary-text{
+  color: #518ef8;
+}
 .MuiDrawer-paperAnchorRight{
   border-top-right-radius: 0px !important;
   border-bottom-right-radius: 0px !important;
