--- a/src/components/pledgeComponents/style.scss
+++ b/src/components/pledgeComponents/style.scss
@@ -1,9 +1,9 @@
 .pledge-progress-bar {
   .MuiLinearProgress-root {
-    background-color: #a364e6;
+    background-color: #518ef8;
   }
   .MuiLinearProgress-barColorPrimary {
-    background-color: #6900d7 !important;
+    background-color: #1a4dc4 !important;
   }
 }
 
