--- a/src/components/reactTable/jobs-react-table.scss
+++ b/src/components/reactTable/jobs-react-table.scss
@@ -32,10 +32,11 @@
         font-weight: bolder;
         color: black;
         font-size: 14px;
+        padding-left: 10px;
       }
 
       th {
-        padding: 10px;
+        padding: 5px 5px;
         min-width: 30px;
         color: #fff;
         font-size: 12px;
@@ -50,7 +51,7 @@
 
       td {
         font-size: 12px;
-        padding: 10px;
+        padding: 5px 1px;
         min-width: 30px;
       }
     }
