--- a/src/containers/mainDashBoard/dashboard.scss
+++ b/src/containers/mainDashBoard/dashboard.scss
@@ -33,7 +33,9 @@ hr {
 }
 
 .jobMpWp {
-  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   .live-job-title {
     display: flex;
     align-items: center;
@@ -50,7 +52,8 @@ hr {
 
   .mapCard {
     border-radius: 12px;
-    height: 809px;
+    height: calc(100% - 10px);
+    min-height: 809px;
     padding: none;
     .MuiCardContent-root {
       height: 100%;
