--- a/src/containers/mainJobs/mainjobs.scss
+++ b/src/containers/mainJobs/mainjobs.scss
@@ -1,8 +1,7 @@
 .mapCard {
   border-radius: 12px;
-  height: calc(100% - 40px);
+  height: 809px;
   padding: none;
-  min-height: 809px;
   .MuiCardContent-root {
     height: 100%;
     padding: 0px;
