--- a/src/components/dashboard/spendChart/spendchart.scss
+++ b/src/components/dashboard/spendChart/spendchart.scss
@@ -2,6 +2,8 @@
   box-shadow: 0px 17px 24px rgba(58, 58, 58, 0.05) !important;
   background: white;
   border-radius: 12px !important;
+  margin: 20px 10px 20px 0px;
+  height: 415px;
   .MuiCardContent-root {
     padding: 12px 12px;
   }
