--- a/src/containers/mainDashBoard/dashboard.scss
+++ b/src/containers/mainDashBoard/dashboard.scss
@@ -5,7 +5,6 @@
   display: flex;
   justify-content: flex-start;
   margin-top: 0.5%;
-  margin-right: 10px;
 }
 .landfill-main{
   width: 100%;
@@ -33,7 +32,9 @@ hr {
 }
 
 .jobMpWp {
-  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   .live-job-title {
     display: flex;
     align-items: center;
@@ -50,8 +51,8 @@ hr {
 
   .mapCard {
     border-radius: 12px;
-    height: 809px;
-    padding: none;
+    height: calc(100% - 10px);
+    min-height: 809px;
     .MuiCardContent-root {
       height: 100%;
       padding: 0px;
