--- a/src/components/dashboard/dashboardServices/dashboardservices.scss
+++ b/src/components/dashboard/dashboardServices/dashboardservices.scss
@@ -5,11 +5,8 @@
   box-sizing: border-box;
   box-shadow: 0px 17px 24px rgba(58, 58, 58, 0.05) !important;
   border-radius: 11.6836px;
-  padding: 0px 12px;
-  height: 415px;
+  padding: 12px;
   max-height: 100%;
-  margin-right: 10px;
-  margin-left: 10px;
   
   @media only screen and (max-width: 768px) {
     width: 100% !important;
@@ -28,7 +25,7 @@
       line-height: 18px;
       display: flex;
       align-items: center;
-      color: rgb(81, 142, 248);
+      color: #677790
     }
   }
 
