--- a/src/components/dashboard/jobStatus/jobStatus.scss
+++ b/src/components/dashboard/jobStatus/jobStatus.scss
@@ -1,28 +1,30 @@
-
 .box {
   background-color: #fff;
-  padding: 10% 6%;
-  padding-right: 0px;
+  padding: 6% 6%;
   // border: 2px solid #ececec;
   box-shadow: 0px 17px 24px rgba(58, 58, 58, 0.05) !important;
   box-sizing: border-box;
   border-radius: 11.6836px !important;
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
+  height: 100%;
   flex-direction: column;
   h1 {
     font-style: normal;
     font-weight: 500;
-    font-size: 25px;
-    line-height: 38px;
+    font-size: 24px;
     display: flex;
     align-items: center;
     color: #0d0d39;
     margin: 0px;
     word-break: break-word;
   }
-  span{
+  span {
     color: slategray;
     word-break: break-word;
+    font-size: 14px;
+  }
+  .img-main {
+    text-align: right;
   }
 }
