--- a/src/components/dashboard/spendChart/spendchart.scss
+++ b/src/components/dashboard/spendChart/spendchart.scss
@@ -2,8 +2,6 @@
   box-shadow: 0px 17px 24px rgba(58, 58, 58, 0.05) !important;
   background: white;
   border-radius: 12px !important;
-  margin: 20px 10px 20px 0px;
-  height: 415px;
   .MuiCardContent-root {
     padding: 12px 12px;
   }
@@ -27,10 +25,11 @@
     .dateWp {
       display: flex;
       gap: 10px;
+      width: 100%;
       p {
         font-family: "DM Sans";
         font-style: normal;
-        font-weight: bold;
+        font-weight: normal;
         font-size: 12px;
         line-height: 16px;
         color: #0d0d39;
@@ -51,6 +50,7 @@
       .spend-filter-year {
         display: flex;
         align-items: center;
+        justify-content: space-between;
       }
     }
   }
@@ -111,7 +111,6 @@
       line-height: 20px;
       color: #fff;
       background: linear-gradient(180deg, #73c6f9 0%, #5391f9 100%);
-  
     }
     .react-datepicker-popper[data-placement^="bottom"]
       .react-datepicker__triangle::before {
@@ -136,8 +135,16 @@
     line-height: 20px;
     color: #0f2851;
   }
-  
 }
 //  .spend-bar-chart{
 //     height: 242px;
 //   }
+
+.filter-card {
+  p {
+    color: #677790;
+    font-size: 14px;
+    font-weight: 400;
+    margin: 0!important;
+  }
+}
