--- a/src/components/dashboard/Header/index.scss
+++ b/src/components/dashboard/Header/index.scss
@@ -95,7 +95,7 @@
       font-family: "DM Sans";
       font-style: normal;
       font-weight: 700;
-      font-size: 14px;
+      font-size: 16px;
       line-height: 30px;
       color: #677790;
       width: 400px;
@@ -136,4 +136,23 @@
   background: #fff;
   border: 1px solid #518ef8;
   color: #518ef8;
+}
+.zoom-buttons{
+  width: 35px;
+  height: 80px;
+  background: #60a0f8;
+  position: absolute;
+  right: 2%;
+  bottom: 2%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  color: white;
+  border-radius: 5px;
+  border: 2px solid #2a81f9;
+  span{
+    width: 90%;
+    border-top: 1px solid white;
+  }
 }
