--- a/src/containers/mainDashBoard/dashboard.scss
+++ b/src/containers/mainDashBoard/dashboard.scss
@@ -50,7 +50,8 @@ hr {
   }
 
   .mapCard {
-    border-radius: 12px;
+    border: 1px solid #dbdbdb;
+    border-radius: 0px !important;
     height: calc(100% - 10px);
     min-height: 809px;
     .MuiCardContent-root {
