--- a/src/components/report/header/index.scss
+++ b/src/components/report/header/index.scss
@@ -13,6 +13,9 @@
   flex-direction: row;
   flex-wrap: wrap;
   margin: 0% 1%;
+  @media only screen and (max-width: 1024px) {
+    margin: 0%;
+  }
   .report-grid-header {
     width: 50%;
     display: flex;
@@ -24,6 +27,9 @@
       flex-direction: column;
       width: 100%;
     }
+    @media only screen and (max-width: 1024px) {
+     justify-content: space-between;
+    }
 
     .report-header-card {
       display: flex;
@@ -34,6 +40,13 @@
       margin-left: 5%;
       border-radius: 16px;
       box-shadow: 0px 17px 24px rgba(58, 58, 58, 0.05);
+      @media only screen and (max-width: 1024px) {
+        margin: 0;
+        width: 90% !important;
+        margin-top: 5px;
+        margin-right: 10px;
+        padding: 0px 18px;
+      }
       .MuiOutlinedInput-notchedOutline {
         border: none;
       }
@@ -58,6 +71,15 @@
         z-index: 1;
       }
     }
+    .small{
+      @media only screen and (max-width: 1024px) {
+        margin: 0;
+        width: auto !important;
+        margin-top: 5px;
+        margin-right: 10px;
+        padding: 8px 18px;
+      }
+    }
     .first {
       width: 100%;
       margin-left: 0%;
@@ -70,6 +92,7 @@
       @media only screen and (max-width: 1024px) {
         flex-direction: column;
         width: 100%;
+        align-items: flex-start;
       }
       .text {
         font-size: 16px;
