--- a/src/containers/reports/report.scss
+++ b/src/containers/reports/report.scss
@@ -124,6 +124,11 @@
               justify-content: center;
               align-items: center;
             }
+            .highchart-sites{
+              @media only screen and (max-width: 1024px) {
+                width: 100%;
+              }
+            }
           }
 
           h1 {
